# dedns-server

./: .env  Cargo.toml  idx_a  idx_aaaa
src/: channels.rs  config.rs  dns_service.rs  lib.rs  main.rs  models.rs  proofofuptime.rs  record_index_service.rs  solana_service.rs
